--- a/Project.toml
+++ b/Project.toml
@@ -7,3 +7,7 @@ Clp = "e2554f3b-3117-50c0-817c-e040a3ddf72d"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
+
+[compat]
+julia = "^1.0"
+JuMP = "^0.19"
