--- a/Project.toml
+++ b/Project.toml
@@ -8,11 +8,13 @@ MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 
 [compat]
-julia = "^1.1"
 JuMP = "^0.19"
+julia = "^1.1"
 
 [extras]
 Clp = "e2554f3b-3117-50c0-817c-e040a3ddf72d"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [targets]
-test = ["Clp"]
+test = ["Clp", "Test", "LinearAlgebra"]
