--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "LinearFractional"
 uuid = "31851ddc-f9b7-5097-a470-69ef907d7682"
-version = "0.6.2"
+version = "0.7.0"
 
 [deps]
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
@@ -8,12 +8,13 @@ MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 
 [compat]
-JuMP = "^0.19"
-julia = "^1.1"
+JuMP = "^0.21"
+MathOptInterface = "^0.9"
+julia = "^1"
 
 [extras]
-Clp = "e2554f3b-3117-50c0-817c-e040a3ddf72d"
 Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
+Clp = "e2554f3b-3117-50c0-817c-e040a3ddf72d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
