--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,7 @@ MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 
 [compat]
-JuMP = "1.13 - 1.22.1"
+JuMP = "1.13"
 MacroTools = "^0.5"
 MathOptInterface = "^1"
 julia = "^1.6"
